[package]
name = "exgrid"
version = "0.2.0"
authors = ["PingPongun <pp.pp4@vp.pl>"]
description = "ExGrid is drop-in replacement to egui::Grid with several upgrades"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["demo/*", ".vscode/*"]
repository = "https://github.com/PingPongun/exgrid/"
keywords = ["egui"]

[lib]

[dependencies]
egui ="0.33"
log = { version = "0.4", optional = true, features = ["std"] }
maybe-owned = "0.3.4"
once_cell = "1.19"

[dev-dependencies]
eframe = { version = "0.33" }

[[example]]
name = "demo"
